fixed issue: tags wrapping and long name of room

--- a/client/app/components/modals/RoomModal/RoomModal.module.scss
+++ b/client/app/components/modals/RoomModal/RoomModal.module.scss
@@ -37,6 +37,7 @@
 
 .room__tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     margin: 0 1rem; 
     overflow: hidden;
