--- a/client/app/styles/helpers.scss
+++ b/client/app/styles/helpers.scss
@@ -15,6 +15,9 @@
     gap: 3rem
 }
 
+.w-65 {
+    width: 65%;
+}
 
 .w-100 {
     width: 100%;
